--- a/android/build.gradle
+++ b/android/build.gradle
@@ -49,4 +49,5 @@ dependencies {
     testImplementation "junit:junit:$junitVersion"
     androidTestImplementation "androidx.test.ext:junit:$androidxJunitVersion"
     androidTestImplementation "androidx.test.espresso:espresso-core:$androidxEspressoCoreVersion"
+    implementation 'com.matilock:mati-global-id-sdk:2.10.0'
 }
