--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "mati-capacitor-plugin",
+  "name": "@aposnovmati/mati-capacitor-plugin",
   "version": "0.0.1",
   "description": "Capacitor plugin for MatiSDK",
   "main": "dist/plugin.js",
@@ -56,9 +56,11 @@
   "swiftlint": "@ionic/swiftlint-config",
   "repository": {
     "type": "git",
-    "url": "https://github.com/MatiFace/MatiGlobalIDSDKCapacitorPlugin"
+    "url": "git+https://github.com/MatiFace/MatiGlobalIDSDKCapacitorPlugin.git"
   },
   "bugs": {
     "url": "https://github.com/MatiFace/MatiGlobalIDSDKCapacitorPlugin/issues"
-  }
+  },
+  "homepage": "https://github.com/MatiFace/MatiGlobalIDSDKCapacitorPlugin#readme",
+  "dependencies": {}
 }
