--- a/package.json
+++ b/package.json
@@ -17,21 +17,21 @@
   "author": "Andrey Posnov",
   "license": "MIT",
   "devDependencies": {
-    "@capacitor/android": "^2.4.6",
-    "@capacitor/core": "^2.4.6",
-    "@capacitor/ios": "^2.4.6",
-    "@ionic/prettier-config": "^1.0.0",
-    "@ionic/swiftlint-config": "^1.0.0",
-    "@rollup/plugin-node-resolve": "^8.1.0",
+    "@capacitor/android": "^3.3.2",
+    "@capacitor/core": "^3.3.2",
+    "@capacitor/ios": "^3.3.2",
+    "@ionic/prettier-config": "^2.0.0",
+    "@ionic/swiftlint-config": "^1.1.2",
+    "@rollup/plugin-node-resolve": "^13.0.6",
     "prettier": "^2.0.5",
-    "prettier-plugin-java": "^0.8.0",
+    "prettier-plugin-java": "^1.6.0",
     "rimraf": "^3.0.0",
     "rollup": "^2.21.0",
     "swiftlint": "^1.0.1",
     "typescript": "~3.8.3"
   },
   "peerDependencies": {
-    "@capacitor/core": "^2.4.6"
+    "@capacitor/core": "^3.3.2"
   },
   "files": [
     "dist/",
@@ -62,5 +62,7 @@
     "url": "https://github.com/MatiFace/MatiGlobalIDSDKCapacitorPlugin/issues"
   },
   "homepage": "https://github.com/MatiFace/MatiGlobalIDSDKCapacitorPlugin#readme",
-  "dependencies": {}
+  "dependencies": {
+    "@capacitor/cli": "^3.3.2"
+  }
 }
