--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@aposnovmati/mati-capacitor-plugin",
-  "version": "2.5.2",
+  "name": "@avo121/mati-capacitor-plugin",
+  "version": "2.6.1",
   "description": "Capacitor plugin for MatiSDK",
   "main": "dist/plugin.js",
   "module": "dist/esm/index.js",
@@ -14,6 +14,11 @@
     "watch": "tsc --watch",
     "prepublishOnly": "npm run build"
   },
+
+  "publishConfig": {
+    "access": "public"
+  },
+
   "author": "Andrey Posnov",
   "license": "MIT",
   "devDependencies": {
@@ -37,7 +42,7 @@
     "dist/",
     "ios/",
     "android/",
-    "AposnovmatiMatiCapacitorPlugin.podspec"
+    "Avo121MatiCapacitorPlugin.podspec"
   ],
   "keywords": [
     "capacitor",
