--- a/android/build.gradle
+++ b/android/build.gradle
@@ -51,7 +51,7 @@ dependencies {
     implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
-    implementation ('com.getmati:mati-sdk:3.13.0'){
+    implementation ('com.metamap:android-sdk:3.16.0'){
         exclude group: 'org.json', module: 'json'
     }
 }
