--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "@avo121/mati-capacitor-plugin",
-  "version": "3.1.2",
+  "version": "3.1.4",
   "description": "Capacitor plugin for MetaMapSDK",
   "main": "dist/plugin.js",
   "module": "dist/esm/index.js",
@@ -59,7 +59,7 @@
   "swiftlint": "@ionic/swiftlint-config",
   "repository": {
     "type": "git",
-    "url": "git+https://github.com/GetMetaMap/mati-capacitor-plugin.git"
+    "url": "https://github.com/GetMetaMap/mati-capacitor-plugin"
   },
   "bugs": {
     "url": "https://github.com/GetMetaMap/mati-capacitor-plugin/issues"
