--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
-  "name": "@avo121/mati-capacitor-plugin",
-  "version": "3.1.9",
+  "name": "metamap-capacitor-plugin",
+  "version": "1.0.14",
   "description": "Capacitor plugin for MetaMapSDK",
   "main": "dist/plugin.js",
   "module": "dist/esm/index.js",
@@ -40,7 +40,7 @@
     "dist/",
     "ios/",
     "android/",
-    "Avo121MatiCapacitorPlugin.podspec"
+    "MetamapCapacitorPlugin.podspec"
   ],
   "keywords": [
     "capacitor",
@@ -66,7 +66,7 @@
   },
   "homepage": "https://github.com/GetMetaMap/mati-capacitor-plugin/blob/main/docs/mati-capacitor.md",
   "dependencies": {
-    "@avo121/mati-capacitor-plugin": "^3.0.1",
+    "metamap-capacitor-plugin": "^1.0.3",
     "@capacitor/cli": "^3.3.2"
   }
 }
