--- a/package.json
+++ b/package.json
@@ -1,6 +1,6 @@
 {
   "name": "metamap-capacitor-plugin",
-  "version": "4.4.0",
+  "version": "4.5.0",
   "description": "Capacitor plugin for MetaMapSDK",
   "main": "dist/plugin.js",
   "module": "dist/esm/index.js",
@@ -20,10 +20,10 @@
   "author": "Avo Sukiasyan",
   "license": "MIT",
   "devDependencies": {
-    "@capacitor/android": "^4.0.0",
-    "@capacitor/cli": "^4.0.0",
-    "@capacitor/core": "^4.0.0",
-    "@capacitor/ios": "^4.0.0",
+    "@capacitor/android": "^5.0.0",
+    "@capacitor/cli": "^5.0.0",
+    "@capacitor/core": "^5.0.0",
+    "@capacitor/ios": "^5.0.0",
     "@ionic/prettier-config": "^2.0.0",
     "@ionic/swiftlint-config": "^1.1.2",
     "@rollup/plugin-node-resolve": "^13.0.6",
@@ -32,10 +32,10 @@
     "rimraf": "^3.0.0",
     "rollup": "^2.21.0",
     "swiftlint": "^1.0.1",
-    "typescript": "~3.8.3"
+    "typescript": "~4.6.4"
   },
   "peerDependencies": {
-    "@capacitor/core": "^4.0.0"
+    "@capacitor/core": "^5.0.0"
   },
   "files": [
     "dist/",
@@ -65,6 +65,5 @@
   "bugs": {
     "url": "https://github.com/GetMetaMap/mati-capacitor-plugin/issues"
   },
-  "homepage": "https://github.com/GetMetaMap/mati-capacitor-plugin/blob/main/docs/mati-capacitor.md",
-  "dependencies": {}
+  "homepage": "https://github.com/GetMetaMap/mati-capacitor-plugin/blob/main/docs/mati-capacitor.md"
 }
