--- a/ios/Podfile
+++ b/ios/Podfile
@@ -1,4 +1,4 @@
-require_relative '../../node_modules/@capacitor/ios/scripts/pods_helpers'
+require_relative '../node_modules/@capacitor/ios/scripts/pods_helpers.rb'
 
 platform :ios, '13.0'
 
@@ -7,6 +7,7 @@ def capacitor_pods
   use_frameworks!
   pod 'Capacitor', :path => '../node_modules/@capacitor/ios'
   pod 'CapacitorCordova', :path => '../node_modules/@capacitor/ios'
+  
 end
 
 target 'Plugin' do
