updated version to 4.7.6

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -55,7 +55,10 @@ dependencies {
     implementation project(':capacitor-android')
     implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
     implementation ('com.metamap:android-sdk:3.42.4') {
-        exclude group: "com.airbnb.android", module: "lottie-compose"}
+        exclude group: "com.airbnb.android", module: "lottie-compose"
+        exclude group: "org.jetbrains.compose.runtime", module: "runtime-android"
+        exclude group: "org.jetbrains.compose.runtime", module: "runtime-desktop"
+    }
 }
 
 
