updated version to 4.9.5

--- a/android/build.gradle
+++ b/android/build.gradle
@@ -1,84 +1,118 @@
-ext {
-    junitVersion = project.hasProperty('junitVersion') ? rootProject.ext.junitVersion : '4.13.1'
-    androidxAppCompatVersion = project.hasProperty('androidxAppCompatVersion') ? rootProject.ext.androidxAppCompatVersion : '1.6.1'
-    androidxJunitVersion = project.hasProperty('androidxJunitVersion') ? rootProject.ext.androidxJunitVersion : '1.1.5'
-    androidxEspressoCoreVersion = project.hasProperty('androidxEspressoCoreVersion') ? rootProject.ext.androidxEspressoCoreVersion : '3.5.1'
-}
-
-buildscript {
-    repositories {
-        google()
-        mavenCentral()
-        maven { url "https://jitpack.io" }
-    }
-    dependencies {
-        classpath 'com.android.tools.build:gradle:8.3.0'
-        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
-    }
-}
+//ext {
+//    junitVersion = project.hasProperty('junitVersion') ? rootProject.ext.junitVersion : '4.13.1'
+//    androidxAppCompatVersion = project.hasProperty('androidxAppCompatVersion') ? rootProject.ext.androidxAppCompatVersion : '1.6.1'
+//    androidxJunitVersion = project.hasProperty('androidxJunitVersion') ? rootProject.ext.androidxJunitVersion : '1.1.5'
+//    androidxEspressoCoreVersion = project.hasProperty('androidxEspressoCoreVersion') ? rootProject.ext.androidxEspressoCoreVersion : '3.5.1'
+//}
+//
+//buildscript {
+//    repositories {
+//        google()
+//        mavenCentral()
+//        maven { url "https://jitpack.io" }
+//    }
+//    dependencies {
+//        classpath 'com.android.tools.build:gradle:8.3.0'
+//        classpath "org.jetbrains.kotlin:kotlin-gradle-plugin:1.8.0"
+//    }
+//}
+//
+//apply plugin: 'com.android.library'
+//
+//android {
+//    namespace "com.getmati.plugins.capacitor"
+//    compileSdkVersion 34
+//    defaultConfig {
+//        minSdkVersion 22
+//        targetSdkVersion 33
+//        versionCode 1
+//        versionName "1.0"
+//        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+//    }
+//    buildTypes {
+//        release {
+//            minifyEnabled false
+//            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
+//        }
+//    }
+//    lintOptions {
+//        abortOnError false
+//    }
+//    compileOptions {
+//        sourceCompatibility JavaVersion.VERSION_11
+//        targetCompatibility JavaVersion.VERSION_11
+//    }
+//}
+//
+//repositories {
+//    google()
+//    mavenCentral()
+//    maven { url "https://jitpack.io" }
+//}
+//
+//
+//dependencies {
+//    implementation fileTree(dir: 'libs', include: ['*.jar'])
+//    implementation project(':capacitor-android')
+//    implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
+//    implementation ('com.metamap:android-sdk:3.42.16') {
+//        exclude group: "com.airbnb.android", module: "lottie-compose"
+//        exclude group: "org.jetbrains.compose.runtime", module: "runtime-android"
+//        exclude group: "org.jetbrains.compose.runtime", module: "runtime-desktop"
+//    }
+//}
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
+//
 
 apply plugin: 'com.android.library'
 
 android {
-    compileSdkVersion 34
+    namespace "com.getmati.plugins.capacitor"
+
+    compileSdk 35
+
     defaultConfig {
-        minSdkVersion 22
-        targetSdkVersion 33
-        versionCode 1
-        versionName "1.0"
-        testInstrumentationRunner "androidx.test.runner.AndroidJUnitRunner"
+        minSdk 22
+        targetSdk 35
     }
-    buildTypes {
-        release {
-            minifyEnabled false
-            proguardFiles getDefaultProguardFile('proguard-android.txt'), 'proguard-rules.pro'
-        }
-    }
-    lintOptions {
-        abortOnError false
-    }
+
     compileOptions {
-        sourceCompatibility JavaVersion.VERSION_11
-        targetCompatibility JavaVersion.VERSION_11
+        sourceCompatibility JavaVersion.VERSION_17
+        targetCompatibility JavaVersion.VERSION_17
+    }
+
+    kotlinOptions {
+        jvmTarget = "17"
     }
 }
-
-repositories {
-    google()
-    mavenCentral()
-    maven { url "https://jitpack.io" }
-}
-
 
 dependencies {
-    implementation fileTree(dir: 'libs', include: ['*.jar'])
     implementation project(':capacitor-android')
-    implementation "androidx.appcompat:appcompat:$androidxAppCompatVersion"
-    implementation ('com.metamap:android-sdk:3.42.16') {
+    implementation "androidx.appcompat:appcompat:1.6.1"
+
+    implementation('com.metamap:android-sdk:3.42.16') {
         exclude group: "com.airbnb.android", module: "lottie-compose"
         exclude group: "org.jetbrains.compose.runtime", module: "runtime-android"
         exclude group: "org.jetbrains.compose.runtime", module: "runtime-desktop"
     }
 }
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
-
