updated version to 4.9.7

--- a/android/settings.gradle
+++ b/android/settings.gradle
@@ -1,2 +1,26 @@
+//include ':capacitor-android'
+//project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
+
+
+pluginManagement {
+    repositories {
+        google()
+        mavenCentral()
+        gradlePluginPortal()
+        maven { url "https://jitpack.io" }
+    }
+}
+
+dependencyResolutionManagement {
+    repositoriesMode.set(RepositoriesMode.PREFER_SETTINGS)
+    repositories {
+        google()
+        mavenCentral()
+        maven { url "https://jitpack.io" }
+    }
+}
+
+rootProject.name = "your-project-name"
+
 include ':capacitor-android'
 project(':capacitor-android').projectDir = new File('../node_modules/@capacitor/android/capacitor')
