--- a/android/src/main/AndroidManifest.xml
+++ b/android/src/main/AndroidManifest.xml
@@ -1,6 +1,4 @@
-<manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="io.mati.plugins.capacitor.maticapacitorplugin">
-
+<manifest xmlns:android="http://schemas.android.com/apk/res/android">
     <application/>
 </manifest>
   
